trigger events,url page background

--- a/app/popup.html
+++ b/app/popup.html
@@ -2,14 +2,19 @@
 <html class="no-js" lang="">
   <head>
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="popup.css">
     <script src="jquery-2.2.1.min.js"></script>
-    <script src="content.js"></script>
+    <script src="popup.js"></script>
 
   </head>
   <body>
 
-  <p>Hellow</p>
+  <div class="yes_show">
+    <button id="save_property">Save</button>
+  </div>
+  <div class="no_show">
+    <p>No valid</p>
+  </div>
 
   </body>
 </html>
